<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_228dp"
    android:layout_height="@dimen/dimen_105dp"
    android:background="@drawable/bg_rect_round_corner_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_27dp"
        android:text="@string/device_plan_delete_tip"
        android:textColor="#A6000000"
        android:textSize="@dimen/dimen_13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_27dp"
        android:background="#1A000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/bg_dialog_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_rect_transparent_pressed_selector"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="#A6000000"
            android:textSize="@dimen/dimen_13dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_rect_transparent_pressed_selector"
            android:gravity="center"
            android:text="@string/btn_confirm"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_13dp" />

    </LinearLayout>

</LinearLayout>